# salesforce-mcp-server

./: .gitignore  CODE_ANALYSIS_REPORT.md  README.md  TESTING.md  UPDATES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
examples/: basic_usage.py  bulk_operations.py  genai_integration.py  multi_org.py
src/salesforce_mcp/: __init__.py  auth.py  client.py  config.py  exceptions.py  mcp_mock.py  server.py
tests/: __init__.py  test_auth.py  test_client.py  test_server.py
