[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesforce-mcp-server"
version = "0.1.0"
description = "MCP server for Salesforce API integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "asklokesh", email = "asklokesh@example.com" }
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "simple-salesforce>=1.12.5",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0"
]

[project.scripts]
salesforce-mcp = "salesforce_mcp.server:main"